Update project to Java 17 using OpenRewrite